<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="poster">poster</string>
    <string name="movie_title">Movie Title</string>
    <string name="movie_overview">Movie overview</string>
    <string name="year">2018</string>
    <string name="release_year_label">Release year</string>
    <string name="score">86</string>
    <string name="score_label">User Score</string>
    <string name="runtime_label">Runtime</string>
    <string name="runtime_placeholder">1h 52m</string>
    <string name="top_billed_cast">Top billed cast</string>
    <string name="overview">Overview</string>
    <string name="genre">Genre</string>
</resources>
