<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/image_movie"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:scaleType="fitXY"
        android:contentDescription="@string/poster"
        tools:src="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/image_movie"
        android:layout_marginStart="16dp"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:text="@string/movie_title"/>

    <TextView
        android:id="@+id/tv_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/tv_title"
        android:layout_marginStart="8dp"
        tools:text="2018"/>

    <TextView
        android:id="@+id/tv_overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_toEndOf="@id/image_movie"
        android:layout_below="@id/tv_year"
        android:textSize="12sp"
        tools:text="@string/movie_overview"/>
</RelativeLayout>